fix: transition still looks weird on mobile

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ tbody{
   }
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 500px) and (max-width: 683px) {
   .fixed-pos {
     width: 95%;
   }
